    - Added unique bonuses for silver, gold, and red star ranks.
  Changes:
    - Moved splitters and underground belts to their own subgroups, making it much easier to find the three belt types (belt, underground, splitter) for each tier in the crafting and item selection menus.
    - Removed tree seeds from trade generation on [planet=nauvis].
  Balancing:
    - Buffed [item=discharge-defense-equipment]. It now functons as a portable tesla turret like Wube Software would have originally intended, given that it has always been an electric beam weapon.
  Optimizations:
    - Slightly optimized player iteration for large multiplayer games.
---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 18/5/25
  Major Features:
    - Added [planet=fulgora].
    - Added tier 6 quality: hextreme.
  Balancing:
    - Enemy bases and hex cores now increase in quality by distance on all planets.
  Modding:
    - Hextreme quality can be disabled if you want another mod to replace it.
  Bugfixes:
    - Fixed blinking trades in hex cores.
    - [item=crude-oil-barrel] no longer shows up in trades on [planet=vulcanus].
    - Fixed uncommon crash caused by the spawning of hex cores.
  Features:
    - Trades now work on a per-quality basis.
        Normal in, normal out. Rare in, rare out, etc.
        Only one trade is needed for all qualities. Works up to the hex core's quality.
        Coins do not have quality, so they multiply for each quality tier.
        NOTE: Quality purchases require more coins than the coins obtained from selling at the same quality.
        (This is a default mod setting to prevent an infinite coin exploit.)
    - Dropdown added to hex cores for viewing trades with different qualities on the items, particularly used to see how coin inputs and outputs are affected by quality.
    - Production statistics now include the statistics of currently active trading on each surface.