@@ -66,7 +66,6 @@ return {
             ["decider-combinator"] = 23.233017066310051,
             ["defender-capsule"] = 121.59545335004044,
             ["destroyer-capsule"] = 4819.1194400204831,
-            ["discharge-defense-equipment"] = 11325.82465836856,
             ["display-panel"] = 5.417419300706432,
             ["distractor-capsule"] = 764.87501673347572,
             ["efficiency-module"] = 173.10166950715845,
@@ -268,7 +267,6 @@ return {
             ["decider-combinator"] = 361.51502452774389,
             ["defender-capsule"] = 2833.7055067045653,
             ["destroyer-capsule"] = 274406.09558350779,
-            ["discharge-defense-equipment"] = 225131.08210413833,
             ["display-panel"] = 92.20324647842979,
             ["distractor-capsule"] = 28618.795751977865,
             ["efficiency-module"] = 10170.528254761715,
@@ -419,203 +417,199 @@ return {
             ["water-barrel"] = 284.3091292219334
         },
         fulgora = {
-            accumulator = 2193.5182389360784,
-            ["active-provider-chest"] = 6052.2486048622877,
-            ["advanced-circuit"] = 304.54570833329865,
-            ["arithmetic-combinator"] = 4238.9250746827402,
-            ["assembling-machine-1"] = 2626.8806213843918,
-            ["assembling-machine-2"] = 8173.0184821438852,
-            ["assembling-machine-3"] = 63661.718939952691,
-            ["asteroid-collector"] = 95048.329880998164,
-            ["automation-science-pack"] = 107.06376252309771,
-            barrel = 282.12117814644176,
-            battery = 228.40928124913441,
-            ["battery-equipment"] = 6052.4143452422013,
-            ["battery-mk2-equipment"] = 148880.37217613039,
-            ["battery-mk3-equipment"] = 953262.17695542623,
-            beacon = 44686.030138698421,
-            ["belt-immunity-equipment"] = 6748.1109477165137,
-            ["big-electric-pole"] = 3502.8413104416868,
-            boiler = 2392.7002134916575,
-            ["buffer-chest"] = 6052.2486048622877,
-            ["bulk-inserter"] = 16646.476395400328,
-            ["burner-inserter"] = 110.72522452524444,
-            ["burner-mining-drill"] = 2939.7633203959454,
-            ["cannon-shell"] = 5830.2047758480458,
-            car = 12609.317145373281,
-            ["cargo-bay"] = 51520.094881045741,
-            ["cargo-landing-pad"] = 117180.81746529184,
-            ["cargo-wagon"] = 9127.2299186634464,
-            centrifuge = 124269.42495061316,
-            ["chemical-plant"] = 6853.6325663897069,
-            ["chemical-science-pack"] = 6319.6553413219517,
-            ["cliff-explosives"] = 54133.063836364207,
-            ["cluster-grenade"] = 31573.455867351408,
-            concrete = 152.27285416580111,
-            ["constant-combinator"] = 2645.0904199431429,
-            ["construction-robot"] = 21263.658530515157,
-            ["copper-cable"] = 213.81513367155421,
-            ["copper-plate"] = 19.412390608825064,
-            crusher = 107938.24548910503,
-            ["decider-combinator"] = 4238.8649298537593,
-            ["defender-capsule"] = 7348.3282751637153,
-            ["destroyer-capsule"] = 557623.347321201,
-            ["discharge-defense-equipment"] = 741192.79689004156,
-            ["display-panel"] = 574.38417228535866,
-            ["distractor-capsule"] = 60921.120077870037,
-            ["efficiency-module"] = 6668.2132268433061,
-            ["efficiency-module-2"] = 88297.095346046612,
-            ["electric-engine-unit"] = 3171.8999522699837,
-            ["electric-furnace"] = 18532.854286415455,
-            ["electric-mining-drill"] = 2774.8312638201796,
-            electrolyte = 91.680331162997021,
-            ["electromagnetic-plant"] = 618687.2637974883,
-            ["electromagnetic-science-pack"] = 26460.526765533494,
-            ["electronic-circuit"] = 358.90886222150459,
-            ["energy-shield-equipment"] = 6748.1109477143691,
-            ["energy-shield-mk2-equipment"] = 153823.65461584041,
-            ["engine-unit"] = 698.33119382018162,
-            ["exoskeleton-equipment"] = 215316.27709222527,
-            ["explosive-cannon-shell"] = 10515.493874953641,
-            ["explosive-rocket"] = 15093.809130776797,
-            explosives = 2358.4461386820558,
-            ["express-splitter"] = 34034.258846701843,
-            ["express-transport-belt"] = 1731.3480708895302,
-            ["express-underground-belt"] = 7021.141827959289,
-            ["fast-inserter"] = 2519.0266568888592,
-            ["fast-splitter"] = 13405.094200846414,
-            ["fast-transport-belt"] = 420.06043966843191,
-            ["fast-underground-belt"] = 2055.8435546852656,
-            ["firearm-magazine"] = 151.44139754638272,
-            flamethrower = 2817.4981918807644,
-            ["flamethrower-ammo"] = 3505.3492873947002,
-            ["flamethrower-turret"] = 30675.727840867934,
-            ["fluid-wagon"] = 13136.918870140902,
-            ["flying-robot-frame"] = 13647.965824708324,
-            gate = 8667.1506425202133,
-            grenade = 430.86823563048756,
-            ["gun-turret"] = 2450.1019635982298,
-            ["hazard-concrete"] = 194.36535373745352,
-            ["heat-exchanger"] = 7981.8462294536403,
-            ["heat-pipe"] = 3833.3748799439441,
-            ["heavy-armor"] = 22439.267589927378,
+            accumulator = 2123.6398074228659,
+            ["active-provider-chest"] = 10754.057394677573,
+            ["advanced-circuit"] = 304.54570833335788,
+            ["arithmetic-combinator"] = 11541.216895598023,
+            ["assembling-machine-1"] = 6837.5073119745002,
+            ["assembling-machine-2"] = 21042.260938486826,
+            ["assembling-machine-3"] = 149986.87182509311,
+            ["asteroid-collector"] = 149388.08825646658,
+            ["automation-science-pack"] = 91.582733068623526,
+            barrel = 296.9806025973129,
+            battery = 228.40928124941891,
+            ["battery-equipment"] = 6261.2694222674345,
+            ["battery-mk2-equipment"] = 153202.36692634155,
+            ["battery-mk3-equipment"] = 1017408.6593689333,
+            beacon = 92645.539134600986,
+            ["belt-immunity-equipment"] = 6956.9660247374113,
+            ["big-electric-pole"] = 4042.3146967162638,
+            boiler = 2247.3071570813318,
+            ["buffer-chest"] = 10754.057394677573,
+            ["bulk-inserter"] = 51650.719763033456,
+            ["burner-inserter"] = 82.424459759091064,
+            ["burner-mining-drill"] = 2840.0632406121326,
+            ["cannon-shell"] = 5632.5368553672815,
+            car = 10959.607532662569,
+            ["cargo-bay"] = 51993.090202533662,
+            ["cargo-landing-pad"] = 118008.55927790652,
+            ["cargo-wagon"] = 8866.2442932176218,
+            centrifuge = 125431.64202629324,
+            ["chemical-plant"] = 16029.050593903145,
+            ["chemical-science-pack"] = 6113.1084019564014,
+            ["cluster-grenade"] = 29354.79047818535,
+            concrete = 152.27285416608561,
+            ["constant-combinator"] = 5969.5942786726337,
+            ["construction-robot"] = 44976.773128715242,
+            ["copper-cable"] = 304.5457083334785,
+            crusher = 175843.08415696933,
+            ["decider-combinator"] = 11532.589714289241,
+            ["defender-capsule"] = 9741.006631223956,
+            ["destroyer-capsule"] = 687266.70602541324,
+            ["discharge-defense-equipment"] = 2835376.3550389661,
+            ["display-panel"] = 1872.352804007339,
+            ["distractor-capsule"] = 79572.056538197518,
+            ["efficiency-module"] = 15626.712296899066,
+            ["efficiency-module-2"] = 191022.95102402405,
+            ["electric-engine-unit"] = 6496.9150055602577,
+            ["electric-furnace"] = 18745.702181091339,
+            ["electric-mining-drill"] = 7114.2549489361909,
+            electrolyte = 91.680331163113152,
+            ["electromagnetic-plant"] = 617457.9928086655,
+            ["electromagnetic-science-pack"] = 32517.794378990777,
+            ["electronic-circuit"] = 1255.1664910331197,
+            ["energy-shield-equipment"] = 6956.9660247388829,
+            ["energy-shield-mk2-equipment"] = 158145.64936606027,
+            ["engine-unit"] = 620.35364196091325,
+            ["exoskeleton-equipment"] = 407341.78314568364,
+            ["explosive-cannon-shell"] = 10317.825954472901,
+            ["explosive-rocket"] = 14985.925776960286,
+            explosives = 2358.4461386820449,
+            ["express-splitter"] = 87268.955704904525,
+            ["express-transport-belt"] = 1696.2377501101294,
+            ["express-underground-belt"] = 6497.4274154427212,
+            ["fast-inserter"] = 7868.5943140776599,
+            ["fast-splitter"] = 41065.736525277855,
+            ["fast-transport-belt"] = 399.11398238804151,
+            ["fast-underground-belt"] = 1754.5595734313804,
+            ["firearm-magazine"] = 52.008500000148274,
+            flamethrower = 2921.9257303927488,
+            ["flamethrower-ammo"] = 3601.4226228271364,
+            ["flamethrower-turret"] = 29864.244006878736,
+            ["fluid-wagon"] = 12130.305612616476,
+            ["flying-robot-frame"] = 28403.375264003938,
+            gate = 11709.070179443699,
+            grenade = 263.159999999967,
+            ["gun-turret"] = 1503.4957562637219,
+            ["hazard-concrete"] = 194.36535373577809,
+            ["heat-exchanger"] = 6073.1488904011921,
+            ["heat-pipe"] = 3722.5372841731764,
+            ["heavy-armor"] = 21790.462151248157,
             ["heavy-oil"] = 6,
-            ["heavy-oil-barrel"] = 855.3164682766369,
-            ["holmium-ore"] = 913.63712498939697,
-            ["holmium-plate"] = 1170.1407500790215,
-            ["holmium-solution"] = 44.998058013070093,
-            ice = 182.72742498939709,
-            inserter = 726.95613932130402,
-            ["iron-chest"] = 299.18910246923019,
-            ["iron-gear-wheel"] = 45.681856249973478,
-            ["iron-plate"] = 29.118585913203898,
-            ["iron-stick"] = 18.699318904325107,
-            lab = 7417.6753929662509,
-            ["land-mine"] = 2028.7469453977967,
-            landfill = 14667.944396589755,
-            ["laser-turret"] = 35397.199916164791,
-            ["light-armor"] = 1588.2878279269714,
-            ["light-oil"] = 30.516596921082243,
-            ["light-oil-barrel"] = 2656.440519439182,
-            ["lightning-collector"] = 158641.59462554424,
-            ["lightning-rod"] = 12673.807780568508,
-            locomotive = 43823.636193399776,
-            ["logistic-robot"] = 21104.021364650394,
-            ["logistic-science-pack"] = 1315.3010178394484,
-            ["long-handed-inserter"] = 1343.8950342195576,
-            ["low-density-structure"] = 913.63712499957558,
-            lubricant = 7.8012749988219046,
-            ["lubricant-barrel"] = 987.64803678948147,
-            ["mech-armor"] = 3179331.2952474561,
-            ["medium-electric-pole"] = 1569.5697056454831,
-            ["military-science-pack"] = 9619.6853978503841,
-            ["modular-armor"] = 40175.675263313497,
-            ["night-vision-equipment"] = 6748.1109477165137,
-            ["nuclear-reactor"] = 769049.14426292269,
-            ["offshore-pump"] = 301.32422527033566,
-            ["oil-refinery"] = 34149.113045616214,
-            ["passive-provider-chest"] = 6052.2486048622877,
-            ["personal-laser-defense-equipment"] = 394472.95505615877,
-            ["personal-roboport-equipment"] = 45048.03163901368,
-            ["personal-roboport-mk2-equipment"] = 737721.29499532492,
-            ["petroleum-gas"] = 97.622737286975024,
-            ["petroleum-gas-barrel"] = 7586.4266742548061,
-            ["piercing-rounds-magazine"] = 828.40472783879761,
-            ["piercing-shotgun-shell"] = 1661.032884507712,
-            pipe = 37.398637808754877,
-            ["pipe-to-ground"] = 384.56012981700042,
-            ["plastic-bar"] = 71.17876556558852,
-            ["poison-capsule"] = 3630.8246555751571,
-            ["power-armor"] = 224440.04913584166,
-            ["power-armor-mk2"] = 1434946.5282753119,
-            ["power-switch"] = 3359.1860475752742,
-            ["processing-unit"] = 456.81856250006774,
-            ["production-science-pack"] = 31027.332498507843,
-            ["productivity-module"] = 6668.2132268433061,
-            ["productivity-module-2"] = 88297.095346046612,
-            ["programmable-speaker"] = 5177.5393554074799,
-            pump = 1656.0731129378162,
-            pumpjack = 7717.7216299097336,
-            ["quality-module"] = 6668.3998107022644,
-            ["quality-module-2"] = 88279.177500167585,
-            ["quality-module-3"] = 1314556.890849438,
-            radar = 3878.9076175689943,
-            rail = 388.95189515173917,
-            ["rail-chain-signal"] = 746.79823133597904,
-            ["rail-ramp"] = 204880.36748060136,
-            ["rail-signal"] = 746.79823133597904,
-            ["rail-support"] = 37834.983382219521,
-            ["refined-concrete"] = 1169.481025707219,
-            ["refined-hazard-concrete"] = 1492.7584728679758,
-            ["repair-pack"] = 1197.8078544857826,
-            ["requester-chest"] = 6052.2486048622877,
-            roboport = 47537.557699243524,
-            rocket = 3886.5100999594283,
-            ["rocket-fuel"] = 3237.2299332649482,
-            ["rocket-launcher"] = 4487.4773111712429,
-            ["rocket-silo"] = 2383923.7559385346,
+            ["heavy-oil-barrel"] = 877.14956919262886,
+            ["holmium-ore"] = 913.63712499288226,
+            ["holmium-plate"] = 1170.1407500791611,
+            ["holmium-solution"] = 44.998058012982476,
+            ice = 182.72742499288248,
+            inserter = 2193.6842101460679,
+            ["iron-chest"] = 102.74850000059313,
+            ["iron-gear-wheel"] = 45.681856249981273,
+            ["iron-stick"] = 6.421781249961743,
+            lab = 22875.320479477588,
+            ["land-mine"] = 2033.4461846314427,
+            landfill = 14667.944396584006,
+            ["laser-turret"] = 79662.1611402696,
+            ["light-armor"] = 545.45499999940682,
+            ["light-oil"] = 30.516596921345293,
+            ["light-oil-barrel"] = 2678.2736203749237,
+            ["lightning-collector"] = 201699.22360548167,
+            ["lightning-rod"] = 14871.846392068517,
+            locomotive = 57903.5703299405,
+            ["logistic-robot"] = 42787.609345068959,
+            ["logistic-science-pack"] = 3755.8615898661737,
+            ["long-handed-inserter"] = 3769.7472393439593,
+            ["low-density-structure"] = 913.63712500035126,
+            lubricant = 7.8012749992091663,
+            ["lubricant-barrel"] = 1009.4811377244506,
+            ["mech-armor"] = 3634196.942993301,
+            ["medium-electric-pole"] = 1829.7282435209286,
+            ["military-science-pack"] = 8936.1356756149271,
+            ["modular-armor"] = 41324.378186949965,
+            ["night-vision-equipment"] = 6956.9660247374113,
+            ["nuclear-reactor"] = 771285.76985627424,
+            ["offshore-pump"] = 192.27943295861269,
+            ["oil-refinery"] = 55862.976889437625,
+            ["passive-provider-chest"] = 10754.057394677573,
+            ["personal-laser-defense-equipment"] = 789221.30541752384,
+            ["personal-roboport-equipment"] = 45576.312127960002,
+            ["personal-roboport-mk2-equipment"] = 738203.28214687342,
+            ["petroleum-gas"] = 97.622737286324593,
+            ["petroleum-gas-barrel"] = 7608.2597752006513,
+            ["piercing-rounds-magazine"] = 335.47898245017933,
+            ["piercing-shotgun-shell"] = 1256.6249474614156,
+            pipe = 12.84356250000833,
+            ["pipe-to-ground"] = 132.06689739725414,
+            ["poison-capsule"] = 9037.2912240294045,
+            ["power-armor"] = 382165.8053313244,
+            ["power-armor-mk2"] = 2006243.6164302409,
+            ["power-switch"] = 7096.5596223811281,
+            ["processing-unit"] = 456.8185625000454,
+            ["production-science-pack"] = 38704.68426015041,
+            ["productivity-module"] = 15626.712296899066,
+            ["productivity-module-2"] = 191022.95102402405,
+            ["programmable-speaker"] = 12805.580195037826,
+            pump = 1497.7090139482589,
+            pumpjack = 16637.751527289871,
+            ["quality-module"] = 15655.773193520577,
+            ["quality-module-2"] = 183624.0868376648,
+            ["quality-module-3"] = 1867756.4720073459,
+            radar = 11064.581664294028,
+            rail = 388.24028447112408,
+            ["rail-chain-signal"] = 1931.5638040073388,
+            ["rail-ramp"] = 201363.74246699517,
+            ["rail-signal"] = 1931.5638040073388,
+            ["rail-support"] = 37350.888695109898,
+            ["refined-concrete"] = 1147.4152845612562,
+            ["refined-hazard-concrete"] = 1464.5931402698297,
+            ["repair-pack"] = 3850.780706177964,
+            ["requester-chest"] = 10754.057394677573,
+            roboport = 48495.373225275223,
+            rocket = 3825.0170802282905,
+            ["rocket-fuel"] = 3237.2299332561597,
+            ["rocket-launcher"] = 13554.920321183661,
+            ["rocket-silo"] = 2913414.4045815491,
             scrap = 86,
-            ["selector-combinator"] = 32273.948340742641,
-            ["shotgun-shell"] = 152.54741850137123,
-            ["slowdown-capsule"] = 2387.4448159293192,
-            ["small-lamp"] = 1725.5944183393804,
-            ["solar-panel"] = 13584.538868480047,
-            ["solar-panel-equipment"] = 31615.085720503368,
-            ["solid-fuel"] = 130.51958927511137,
-            ["space-platform-foundation"] = 15745.592211329811,
-            ["space-platform-starter-pack"] = 2979027.9744009669,
-            ["speed-module"] = 6667.9488274497853,
-            ["speed-module-2"] = 88293.985819670357,
-            splitter = 3667.3794361676214,
-            ["steam-engine"] = 1414.0938674121567,
-            ["steam-turbine"] = 7123.4285702061479,
-            ["steel-chest"] = 2229.4454077916862,
-            ["steel-furnace"] = 11882.000714147376,
-            ["steel-plate"] = 216.98082286279632,
-            stone = 228.40928124913441,
-            ["stone-brick"] = 625.83229425433649,
-            ["stone-furnace"] = 1466.7944396590835,
-            ["stone-wall"] = 4018.9580928825535,
-            ["storage-chest"] = 6052.2486048622877,
-            ["storage-tank"] = 2620.3740622703167,
-            ["submachine-gun"] = 1748.7592290964883,
-            substation = 8339.7806003094393,
-            sulfur = 2461.4124635871426,
-            ["sulfuric-acid"] = 458.97763725300177,
-            ["sulfuric-acid-barrel"] = 34133.545077891911,
-            supercapacitor = 11566.231972561702,
-            superconductor = 979.95721245255197,
-            tank = 76811.37027726158,
-            ["tesla-ammo"] = 24240.46127814244,
-            ["tesla-turret"] = 633704.51568568288,
-            teslagun = 70764.505799449544,
-            thruster = 46761.802694530292,
-            ["train-stop"] = 5115.2853336235949,
-            ["transport-belt"] = 55.362612261631241,
-            ["underground-belt"] = 425.58739111221922,
-            ["utility-science-pack"] = 14560.719969727375,
-            water = 11.87922410410704,
-            ["water-barrel"] = 1287.2366066636268
+            ["selector-combinator"] = 86093.775890636636,
+            ["shotgun-shell"] = 62.86600000008896,
+            ["slowdown-capsule"] = 5992.4627966996704,
+            ["small-lamp"] = 3651.8827020630492,
+            ["solar-panel"] = 41071.454390832485,
+            ["solar-panel-equipment"] = 88269.591333407705,
+            ["solid-fuel"] = 130.51958927859675,
+            ["space-platform-foundation"] = 19479.504869268963,
+            ["space-platform-starter-pack"] = 3513618.3061666661,
+            ["speed-module"] = 15580.365981791812,
+            ["speed-module-2"] = 190389.53068349138,
+            splitter = 10915.575862228341,
+            ["steam-engine"] = 887.83400642945185,
+            ["steam-turbine"] = 5411.8897058805996,
+            ["steel-chest"] = 2346.8711034514413,
+            ["steel-furnace"] = 11989.769933894682,
+            ["steel-plate"] = 228.40928125000627,
+            stone = 228.40928124941891,
+            ["stone-brick"] = 625.83229425414368,
+            ["stone-furnace"] = 1466.794439658473,
+            ["stone-wall"] = 4018.9580928827704,
+            ["storage-chest"] = 10754.057394677573,
+            ["storage-tank"] = 2109.2272343824161,
+            ["submachine-gun"] = 1255.7351627746693,
+            substation = 9443.8358386042055,
+            sulfur = 2461.4124635879994,
+            ["sulfuric-acid"] = 458.32879546399869,
+            ["sulfuric-acid-barrel"] = 34107.710692375382,
+            supercapacitor = 15616.190362707615,
+            superconductor = 931.01106954005593,
+            tank = 72809.503615446403,
+            ["tesla-ammo"] = 31855.802448799837,
+            ["tesla-turret"] = 455947.68039865751,
+            teslagun = 65749.472106345391,
+            thruster = 81138.349256093017,
+            ["train-stop"] = 13207.304002287075,
+            ["transport-belt"] = 41.212229880284255,
+            ["underground-belt"] = 229.32396771738203,
+            ["utility-science-pack"] = 26914.697956778942,
+            water = 11.879224104035899,
+            ["water-barrel"] = 1309.069707604423
         },
         gleba = {
             accumulator = 77024.804386702293,
@@ -667,7 +661,6 @@ return {
             ["decider-combinator"] = 3751.3034347348148,
             ["defender-capsule"] = 23441.35885150707,
             ["destroyer-capsule"] = 2338373.0245208684,
-            ["discharge-defense-equipment"] = 7292930.0322574889,
             ["display-panel"] = 777.81584842302755,
             ["distractor-capsule"] = 234312.9622796874,
             ["efficiency-module"] = 71545.07363968635,
